--- a/package.json
+++ b/package.json
@@ -97,10 +97,8 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*": {
-      "{js,jsx,ts,tsx}": "[eslint --fix,prettier --write]",
-      "json": "[prettier --write]",
-      "md": "[prettier --write]"
-    }
+    "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
+    "*.json": ["prettier --write"],
+    "*.md": ["prettier --write"]
   }
 }
